--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,1 +1,27 @@
-<p>add-user works!</p>
+<div class="mb-4 p-4 bg-white rounded-md shadow">
+  <form>
+    <mat-form-field class="w-full">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" placeholder="Enter user's name" />
+    </mat-form-field>
+    <mat-form-field class="w-full mt-4">
+      <mat-label>Workout Type</mat-label>
+      <mat-select formControlName="workoutType">
+        <mat-option value="cycle">cycle </mat-option>
+        <mat-option value="running">running </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="w-full mt-4">
+      <mat-label>Minutes</mat-label>
+      <input
+        matInput
+        type="number"
+        formControlName="minutes"
+        placeholder="Enter workout duration"
+      />
+    </mat-form-field>
+    <button mat-raised-button color="primary" type="submit" class="mt-4 w-full">
+      Add User
+    </button>
+  </form>
+</div>
