--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,26 +1,45 @@
-<div class="mb-4 p-4 bg-white rounded-md shadow">
-  <form>
-    <mat-form-field class="w-full">
-      <mat-label>Name</mat-label>
-      <input matInput formControlName="name" placeholder="Enter user's name" />
-    </mat-form-field>
-    <mat-form-field class="w-full mt-4">
-      <mat-label>Workout Type</mat-label>
-      <mat-select formControlName="workoutType">
-        <mat-option value="cycle">cycle </mat-option>
-        <mat-option value="running">running </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="w-full mt-4">
-      <mat-label>Minutes</mat-label>
+<div class="mb-4 p-4 bg-white rounded-md shadow-md">
+  <form (ngSubmit)="onSubmit()">
+    <div class="mb-4">
+      <label for="name" class="block text-sm font-medium text-gray-700"
+        >Name</label
+      >
       <input
-        matInput
+        id="name"
+        type="text"
+        placeholder="Enter user's name"
+        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+      />
+    </div>
+    <div class="mb-4">
+      <label for="workoutType" class="block text-sm font-medium text-gray-700"
+        >Workout Type</label
+      >
+      <select
+        id="workoutType"
+        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+      >
+        <option *ngFor="let type of workoutTypes" [value]="type">
+          {{ type }}
+        </option>
+      </select>
+    </div>
+    <div class="mb-4">
+      <label for="minutes" class="block text-sm font-medium text-gray-700"
+        >Minutes</label
+      >
+      <input
+        id="minutes"
         type="number"
         formControlName="minutes"
         placeholder="Enter workout duration"
+        class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
       />
-    </mat-form-field>
-    <button mat-raised-button color="primary" type="submit" class="mt-4 w-full">
+    </div>
+    <button
+      type="submit"
+      class="mt-4 w-full bg-indigo-600 text-white py-2 px-4 rounded-md shadow hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50"
+    >
       Add User
     </button>
   </form>
