--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -25,6 +25,7 @@
         class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
         required
       >
+        <option value="" disabled>All Workout Types</option>
         <option *ngFor="let type of workoutTypes" [value]="type">
           {{ type }}
         </option>
