--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,32 +1,44 @@
+<div class="flex justify-between">
+  <h3 class="pl-5 pt-5 text-gray-800">Users</h3>
+  <div class="pr-5 pt-5">
+    <button
+      type="button"
+      class="text-lg p-3 px-5 rounded-md hover:bg-blue-400 bg-blue-500"
+    >
+      Filter
+    </button>
+  </div>
+</div>
 <div class="mb-4 p-4 bg-white rounded-md shadow-md">
   <!-- Search by Username -->
-  <div class="mb-4">
-    <input
-      type="text"
-      placeholder="Search by Username"
-      (input)="applyfilter($event)"
-      class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
-    />
-  </div>
+  <div class="">
+    <div class="mb-4 flex justify-end">
+      <input
+        type="text"
+        placeholder="Search by Username"
+        (input)="applyfilter($event)"
+        class="w-1/3 px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+      />
+    </div>
 
-  <!-- Filter by Workout Type -->
-  <div class="mb-4">
-    <label
-      for="workoutType"
-      class="block text-sm font-medium text-gray-700 mb-2"
-      >Filter by Workout Type</label
-    >
-    <select
-      id="workoutType"
-      class="w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
-      [(ngModel)]="worktype"
-      (change)="filterByWorkoutType('worktype')"
-    >
-      <option value="">All Workout Types</option>
-      <option *ngFor="let type of workoutTypes" [value]="type">
-        {{ type }}
-      </option>
-    </select>
+    <!-- Filter by Workout Type -->
+    <div class="mb-4 flex justify-end gap-5">
+      <label for="workoutType" class="block pt-2 font-medium text-gray-700 mb-2"
+        >Filter by Workout Type -</label
+      >
+      <select
+        id="workoutType"
+        class="w-1/3 px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
+        [(ngModel)]="worktype"
+        (change)="filterByWorkoutType('worktype')"
+      >
+        <option value="">All Workout Types</option>
+        <option *ngFor="let type of workoutTypes" [value]="type">
+          {{ type }}
+        </option>
+      </select>
+    </div>
+    <hr />
   </div>
 
   <!-- User Data Table -->
