--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,17 +1,18 @@
-<div class="flex justify-between">
+<div class="flex justify-between px-5 md:px-10">
   <h3 class="pl-5 pt-5 text-gray-800">Users</h3>
   <div class="pr-5 pt-5">
     <button
       type="button"
       class="text-lg p-3 px-5 rounded-md hover:bg-blue-400 bg-blue-500"
+      (click)="filterShow()"
     >
       Filter
     </button>
   </div>
 </div>
-<div class="mb-4 p-4 bg-white rounded-md shadow-md">
+<div class="mb-4 p-4 bg-white rounded-md">
   <!-- Search by Username -->
-  <div class="">
+  <div *ngIf="isshowFilter" class="">
     <div class="mb-4 flex justify-end">
       <input
         type="text"
@@ -22,10 +23,7 @@
     </div>
 
     <!-- Filter by Workout Type -->
-    <div class="mb-4 flex justify-end gap-5">
-      <label for="workoutType" class="block pt-2 font-medium text-gray-700 mb-2"
-        >Filter by Workout Type -</label
-      >
+    <div class="mb-4 flex justify-end">
       <select
         id="workoutType"
         class="w-1/3 px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:border-indigo-500 focus:ring focus:ring-indigo-500 focus:ring-opacity-50"
@@ -42,8 +40,8 @@
   </div>
 
   <!-- User Data Table -->
-  <div class="overflow-x-auto">
-    <table class="min-w-full divide-y divide-gray-200">
+  <div class="overflow-x-auto flex justify-center">
+    <table class="w-1/2 divide-y divide-gray-200 bg-gray-100 min-h-60">
       <thead>
         <tr>
           <th
@@ -84,7 +82,7 @@
   </div>
 
   <!-- Pagination Controls -->
-  <div class="mt-4 flex justify-between">
+  <div class="mt-4 flex justify-center gap-5">
     <button
       [disabled]="currentPage === 0"
       class="px-4 py-2 bg-gray-200 rounded-md disabled:opacity-50 hover:bg-gray-300"
