--- a/src/app/add-user/add-user.component.html
+++ b/src/app/add-user/add-user.component.html
@@ -1,6 +1,6 @@
-<h3 class="pl-5 pt-5 text-gray-800">Add User</h3>
+<h3 class="pl-10 pt-5 text-gray-800">Add User</h3>
 
-<div class="mb-4 p-4 pt-0 bg-white rounded-md shadow-md flex justify-center">
+<div class="mb-4 p-4 pt-0 bg-white rounded-md flex justify-center">
   <form
     (ngSubmit)="onSubmit()"
     class="md:w-1/2 p-10 rounded-md w-full border-2 border-gray-300 flex-wrap justify-center bg-gray-50"
