table head rows padding and margin adjusted from left

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -41,11 +41,11 @@
 
   <!-- User Data Table -->
   <div class="overflow-x-auto flex justify-center">
-    <table class="w-1/2 divide-y divide-gray-200 bg-gray-100 min-h-60">
+    <table class="w-1/2 ml-2 divide-y divide-gray-200 bg-gray-100 min-h-60">
       <thead>
         <tr>
           <th
-            class="px-4 py-2 text-left text-sm font-medium text-gray-500 uppercase"
+            class="pl-4 text-left text-sm font-medium text-gray-500 uppercase"
           >
             Sr.No
           </th>
