add message when data is zero

--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -81,6 +81,7 @@
             {{ getTotalMinutes(user.workouts) }}
           </td>
         </tr>
+        <p *ngIf="!users">No Data</p>
       </tbody>
     </table>
   </div>
